Update folding ranges on text modification

BUG: 436480