src/buffer/katetextfolding.cpp
@@ -440,6 +440,34 @@ void TextFolding::debugPrint(const QString &title) const
     printf("%s\n    %s\n", qPrintable(title), qPrintable(debugDump()));
 }
 
+void TextFolding::editEnd(int startLine, int endLine)
+{
+    // Document was edited, see if any ranges need to be removed
+    for (int i = startLine; i <= endLine; ++i) {
+        if (i >= m_buffer.lines()) {
+            continue;
+        }
+        auto ranges = foldingRangesStartingOnLine(i);
+        if (ranges.empty()) {
+            continue;
+        }
+        auto l = m_buffer.line(i);
+        if (l->markedAsFoldingStart()) {
+            continue;
+        }
+
+        for (const auto &f : ranges) {
+            auto it = m_idToFoldingRange.find(f.first);
+            if (it != m_idToFoldingRange.end() && it.value()) {
+                const auto foldingRange = it.value();
+                m_foldingRanges.removeOne(foldingRange);
+                m_foldedFoldingRanges.removeOne(foldingRange);
+                m_idToFoldingRange.erase(it);
+            }
+        }
+    }
+}
+
 QString TextFolding::debugDump(const TextFolding::FoldingRange::Vector &ranges, bool recurse)
 {
     // dump all ranges recursively
